--- a/contents/cont_css/contact_us1.css
+++ b/contents/cont_css/contact_us1.css
@@ -2,14 +2,18 @@
 	font-family: 'Montserrat Alternates', sans-serif;
 	font-family: 'My Soul', cursive;
 	font-family: 'Quicksand', sans-serif;
-	--back_color-primary:#81FFEF;
-	--back_color-second:#F067B4;
+	--back_color-primary:#fd1d1d;
+	--back_color-second:#833ab4;
+	--back_color-third:#1d1efd;
 }
 html{
 	height:100%;
 }
 body{
-	background-image:linear-gradient(310deg,var(--back_color-primary),var(--back_color-second));
+	background-color: #ffff00;
+	background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 1200 800'%3E%3Cdefs%3E%3CradialGradient id='a' cx='0' cy='800' r='800' gradientUnits='userSpaceOnUse'%3E%3Cstop offset='0' stop-color='%23ff8000'/%3E%3Cstop offset='1' stop-color='%23ff8000' stop-opacity='0'/%3E%3C/radialGradient%3E%3CradialGradient id='b' cx='1200' cy='800' r='800' gradientUnits='userSpaceOnUse'%3E%3Cstop offset='0' stop-color='%2300ff19'/%3E%3Cstop offset='1' stop-color='%2300ff19' stop-opacity='0'/%3E%3C/radialGradient%3E%3CradialGradient id='c' cx='600' cy='0' r='600' gradientUnits='userSpaceOnUse'%3E%3Cstop offset='0' stop-color='%239900ff'/%3E%3Cstop offset='1' stop-color='%239900ff' stop-opacity='0'/%3E%3C/radialGradient%3E%3CradialGradient id='d' cx='600' cy='800' r='600' gradientUnits='userSpaceOnUse'%3E%3Cstop offset='0' stop-color='%23ffff00'/%3E%3Cstop offset='1' stop-color='%23ffff00' stop-opacity='0'/%3E%3C/radialGradient%3E%3CradialGradient id='e' cx='0' cy='0' r='800' gradientUnits='userSpaceOnUse'%3E%3Cstop offset='0' stop-color='%23FF0000'/%3E%3Cstop offset='1' stop-color='%23FF0000' stop-opacity='0'/%3E%3C/radialGradient%3E%3CradialGradient id='f' cx='1200' cy='0' r='800' gradientUnits='userSpaceOnUse'%3E%3Cstop offset='0' stop-color='%230CF'/%3E%3Cstop offset='1' stop-color='%230CF' stop-opacity='0'/%3E%3C/radialGradient%3E%3C/defs%3E%3Crect fill='url(%23a)' width='1200' height='800'/%3E%3Crect fill='url(%23b)' width='1200' height='800'/%3E%3Crect fill='url(%23c)' width='1200' height='800'/%3E%3Crect fill='url(%23d)' width='1200' height='800'/%3E%3Crect fill='url(%23e)' width='1200' height='800'/%3E%3Crect fill='url(%23f)' width='1200' height='800'/%3E%3C/svg%3E");
+  	background-attachment: fixed;
+	background-size: cover;
 }
 .container{
 	position:relative;
@@ -35,6 +39,55 @@ body{
 
 }
 .container form.contact_us-1 .form-group-items{
-	margin-left: 30px;
-	margin-top: 20px;
+	display:flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
+
+
+.container form.contact_us-1 .form-group-items input,
+.container form.contact_us-1 .form-group-items textarea{
+	border:none;
+	border-bottom: 2px solid gray;
+	font-family:'Quicksand', sans-serif;
+	font-size: medium;
+	outline: none;
+}
+.container form.contact_us-1 .form-group-items input{
+	margin-bottom:10px;
+	height: 40px;
+	width:450px;
+	
+}
+.container form.contact_us-1 .form-group-items textarea{
+	height:100px ;
+	width:450px;
+	margin-bottom:10px;
+	
+}
+.container form.contact_us-1 .form-group-items button{
+	height: 40px;
+	width:300px;
+	border: none;
+	border-radius: 3.5rem;
+	background-image:linear-gradient(45deg,var(--back_color-primary),var(--back_color-second),var(--back_color-third));
+	font-family:'Quicksand', sans-serif;
+	margin:0 0 3rem 2rem;
+	font-size:1.1rem;;
+	color:white;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+.container form.contact_us-1 .form-group-items input:hover,
+.container form.contact_us-1 .form-group-items textarea:hover{
+	border:none;
+	border-bottom:2px solid #833ab4;
+}
+
+.container form.contact_us-1 .form-group-items .button_arrow{
+	margin-top: 3px;
+	margin-left:5px;
+	font-size: 1.3rem;
 }
