--- a/css/main.css
+++ b/css/main.css
@@ -471,7 +471,7 @@ main .content {
   }
 }
 .contact-us {
-  height: 70vh;
+  height: auto;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -480,8 +480,8 @@ main .content {
 }
 .contact-us .contact-us__contacts {
   margin: 4rem;
-  width: 50%;
-  height: 70vh;
+  width: 40%;
+  height: 80vh;
   display: flex;
   flex-direction: column;
   text-align: left;
@@ -502,18 +502,46 @@ main .content {
   background-color: #7c64d5;
 }
 .contact-us .contact-us__form {
-  width: 50%;
+  width: 40%;
+  height: 80vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  background-color: #ff057c;
 }
+
 .contact-us .contact-us__form .contact-us {
+  width: 85%;
+  height: 85%;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  text-align: left;
-  width: 70%;
-  height: 60vh;
+  align-items: center;
   background-color: crimson;
 }
+
+.contact-us .contact-us__form .contact-us .form-group-items {
+  width: 85%;
+  height: 10%;
+  border: 3px solid black;
+  background-color: blueviolet;
+}
+.contact-us .contact-us__form .contact-us .form-group-items textarea {
+  width: ;
+}
+/*
+.contact-us .contact-us__form .contact-us .form-group-items .form-group-input {
+  width: 100%;
+  height: 70%;
+  background-color: darkslategray;
+}
+
+.contact-us
+  .contact-us__form
+  .contact-us
+  .form-group-items
+  .form-group-input
+  label {
+  margin: 0.5rem auto auto 0.5rem;
+} */
