--- a/css/main.css
+++ b/css/main.css
@@ -296,8 +296,19 @@ main .container .animation-content {
   display: flex;
   flex-direction: column;
 }
+.container .animation-content .comment-icon {
+  position: absolute;
+  z-index: 6;
+  width: 25vw;
+  height: 20vh;
+  border-radius: 00.5rem;
+  background-color: #010718;
+  display: flex;
+  flex-direction: column;
+}
 .container .animation-content .animation__main-screen .main-screen--buttons,
-.container .animation-content .how-to-icon .main-screen--buttons {
+.container .animation-content .how-to-icon .main-screen--buttons,
+.container .animation-content .comment-icon .main-screen--buttons {
   width: 100%;
   height: 5%;
   display: flex;
@@ -308,22 +319,26 @@ main .container .animation-content {
   .animation__main-screen
   .main-screen--buttons
   .btn,
-.container .animation-content .how-to-icon .main-screen--buttons .btn {
+.container .animation-content .how-to-icon .main-screen--buttons .btn,
+.container .animation-content .comment-icon .main-screen--buttons .btn {
   width: 0.5rem;
   height: 0.5rem;
   margin: 0.3rem 0.3rem;
   border-radius: 0.25rem;
 }
 .animation-content .animation__main-screen .main-screen--buttons .btn.btn1,
-.container .animation-content .how-to-icon .main-screen--buttons .btn.btn1 {
+.container .animation-content .how-to-icon .main-screen--buttons .btn.btn1,
+.container .animation-content .comment-icon .main-screen--buttons .btn.btn1 {
   background-color: red;
 }
 .animation-content .animation__main-screen .main-screen--buttons .btn.btn2,
-.container .animation-content .how-to-icon .main-screen--buttons .btn.btn2 {
+.container .animation-content .how-to-icon .main-screen--buttons .btn.btn2,
+.container .animation-content .comment-icon .main-screen--buttons .btn.btn2 {
   background-color: yellow;
 }
 .animation-content .animation__main-screen .main-screen--buttons .btn.btn3,
-.container .animation-content .how-to-icon .main-screen--buttons .btn.btn3 {
+.container .animation-content .how-to-icon .main-screen--buttons .btn.btn3,
+.container .animation-content .comment-icon .main-screen--buttons .btn.btn3 {
   background-color: rgb(55, 226, 55);
 }
 .container .animation-content .animation__main-screen .main-screen--search-line,
@@ -357,7 +372,66 @@ main .container .animation-content {
 }
 .container .animation-content .how-to-icon .main-screen--big-screen {
   background-color: #179eff;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
+.container .animation-content .how-to-icon .main-screen--big-screen .steps {
+  width: 90%;
+  height: 10%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+.container
+  .animation-content
+  .how-to-icon
+  .main-screen--big-screen
+  .steps
+  .step-no {
+  width: 1rem;
+  height: 1rem;
+  background-color: rgb(40, 40, 222);
+  border-radius: 0.5rem;
+}
+.container
+  .animation-content
+  .how-to-icon
+  .main-screen--big-screen
+  .steps
+  .step-text {
+  width: 70%;
+  height: 30%;
+  background-color: #03f6fa;
+}
+.container .animation-content .icon.like-icon {
+  position: absolute;
+  top: 35%;
+  z-index: 5;
+  width: 2rem;
+  height: 2rem;
+  border-radius: 1.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 3px solid black;
+  background-color: rgb(245, 245, 172);
+}
+.container .animation-content .icon.heart-icon {
+  position: absolute;
+  top: 65%;
+  z-index: 5;
+  width: 2rem;
+  height: 2rem;
+  border-radius: 1.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 3px solid black;
+  background-color: rgb(244, 149, 90);
+}
+
 main .content {
   display: flex;
   justify-content: center;
