--- a/css/main.css
+++ b/css/main.css
@@ -173,24 +173,73 @@ main {
 }
 main .container {
   background-color: white;
+  box-sizing: border-box;
 }
 main .container .row {
   width: 100%;
   height: 50vw;
+  margin-top: 2rem;
   display: flex;
   flex-direction: row;
 }
 main .container .text-content {
   width: 30%;
-  background-color: #ff057c;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 main .container .animation-content {
   width: 70%;
   height: 100%;
-  background-color: #03f6fa;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+main .container .row .text-content .main-text {
+  width: 80%;
+  height: auto;
+  font-size: xx-large;
+  font-weight: 600;
+  flex-direction: column;
+  align-items: baseline;
+}
+main .container .row .text-content .sub-text {
+  width: 80%;
+  height: auto;
+  font-size: small;
+  font-weight: 200;
+}
+main .container .row .text-content .buttons {
+  width: 80%;
+  height: 25%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+main .container .row .text-content .buttons .btn {
+  margin-top: 0.5rem;
+  width: 60%;
+  height: 30%;
+  border-radius: 1.5rem;
+  border: none;
+  font-size: medium;
+  font-weight: 300;
+  cursor: pointer;
+}
+main .container .row .text-content .buttons .btn.btn1 {
+  border: 2px solid #2e47ec;
+  color: #2e47ec;
+}
+main .container .row .text-content .buttons .btn.btn2 {
+  background-color: #2e47ec;
+  color: white;
+}
+main .container .row .text-content .buttons .btn.btn2:hover {
+  background-color: white;
+  border: 2px solid #2e47ec;
+  color: #2e47ec;
 }
 .container .animation-content .user-icon {
   position: absolute;
@@ -298,8 +347,10 @@ main .container .animation-content {
 }
 .container .animation-content .comment-icon {
   position: absolute;
+  top: 85%;
+  left: 30%;
   z-index: 6;
-  width: 25vw;
+  width: 20vw;
   height: 20vh;
   border-radius: 00.5rem;
   background-color: #010718;
@@ -431,7 +482,35 @@ main .container .animation-content {
   border: 3px solid black;
   background-color: rgb(244, 149, 90);
 }
-
+.container .animation-content .comment-icon .comments {
+  width: 95%;
+  height: 80%;
+  background-color: #2e47ec;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.container .animation-content .comment-icon .comments .comment {
+  margin: auto;
+  width: 98%;
+  height: 25%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+.container .animation-content .comment-icon .comments .comment .user {
+  width: 12%;
+  height: 100%;
+  border-radius: 1rem;
+  background-color: bisque;
+}
+.container .animation-content .comment-icon .comments .comment .user-comment {
+  width: 80%;
+  height: 40%;
+  background-color: aqua;
+}
 main .content {
   display: flex;
   justify-content: center;
